Remove fancy underline link - causes bug on iPhone

--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -12,10 +12,6 @@
   li {
     padding: 0 8px;
     a {
-      &.current:before,
-      &.current:after {
-        width: 50%;
-      }
     }
   }
 }
