--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -16,10 +16,6 @@ li {
   li {
     padding: 0 8px;
     a {
-      &.current:before,
-      &.current:after {
-        width: 50%;
-      }
     }
   }
 }
